<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learn2fantasy.learn2fantasy.InfoJogadorActivity">

    <SearchView
        android:id="@+id/infoJog_search"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:queryHint="@string/buscar_string"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/infoJog_searchBot"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="@string/buscar_string"
        android:onClick="botBusca"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/infoJog_buscTime"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/buscar_jogador_time_string"
        android:layout_margin="10dp"
        android:onClick="escolherOrdenacao"
        app:layout_constraintTop_toBottomOf="@id/infoJog_searchBot"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/infoJog_buscPos"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/buscar_jogador_posicao_string"
        android:layout_margin="10dp"
        android:onClick="escolherOrdenacao"
        app:layout_constraintTop_toBottomOf="@id/infoJog_searchBot"
        app:layout_constraintRight_toRightOf="parent"/>

    <ListView
        android:id="@+id/infoJog_lisView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/infoJog_buscPos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </ListView>
</android.support.constraint.ConstraintLayout>
