...
    <string name="null_sting">-</string>
    <string name="grama">grama</string>
    <string name="logo">logo</string>

    <string name="comparar_jogador_string">Comparar Jogadores de mesma Posição</string>
    <string name="ranking_jogador_string">Ranking de Jogador por Posição</string>
    <string name="info_jogador_string">Informações de Jogadores</string>
    <string name="comparar_time_string">Comparar Times</string>
    <string name="info_time_string">Informações de Times</string>
    <string name="ranking_time_string">Ranking de Times</string>

    <string name="centroavante_string">Centroavante</string>
    <string name="seg_ata_string">Segundo Atacante</string>
...
    <string name="vasco_string">Vasco</string>
    <string name="vitoria_string">Vitória</string>

    <string name="escolher_time_string">Escolha o time:</string>
    <string name="escolher_jogador_string">Escolha o jogador:</string>
    <string name="escolher_pos_string">Escolha a posição:</string>
    <string name="buscar_string">Buscar</string>
    <string name="buscar_jogador_time_string">Ordenar por\n time</string>
    <string name="buscar_jogador_posicao_string">Ordenar por\n posição</string>
    <string name="escolher_times_string">Escolha dois times para serem comparados:</string>
    <string name="escolher_jogadores_string">Escolha dois jogadores para serem comparados:</string>
    <string name="comparar_string">Comparar</string>
    <string name="nome_string">nome</string>
...
