...

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout15"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/menu_bolinha"
            android:contentDescription="@string/logo"
...
            app:layout_constraintBottom_toTopOf="@+id/menu_compJog"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/menu_infoJog"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/info_jogador_string"
            app:layout_constraintBottom_toTopOf="@+id/menu_rankJog"
...
