...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/exibirInfoJog_containerNome"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/exibirInfoJog_nomeJog"
                    android:text="@string/nome_jogador_string"
                    android:textColor="@color/corDestaque"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="10dp"
...
